started writing postgres storage and service
