# docs/swagger.json
@@ -4,13 +4,17 @@
         "contact": {}
     },
     "paths": {
-        "/couriers/": {
-            "get": {
+        "/api/records/": {
+            "post": {
                 "consumes": [
-                    "application/json"
+                    "application/json",
+                    "text/xml",
+                    "application/x-www-form-urlencoded"
                 ],
                 "produces": [
-                    "application/json"
+                    "application/json",
+                    "text/xml",
+                    "application/x-www-form-urlencoded"
                 ],
                 "tags": [
                     "records-controller"
@@ -29,9 +33,9 @@
                 ],
                 "responses": {
                     "201": {
-                        "description": "OK",
+                        "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/model.CreateRecordRequest"
+                            "$ref": "#/definitions/model.CreateRecordResponse"
                         }
                     },
                     "400": {
@@ -51,6 +55,20 @@
         "model.CreateRecordRequest": {
             "type": "object",
             "properties": {
+                "msg_type": {
+                    "type": "string"
+                },
+                "user": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.CreateRecordResponse": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
                 "msg_type": {
                     "type": "string"
                 },
